profilelist1exp/unpackaged/objects/Sales_Channel_Group__c.object
<CustomObject>
    <fields>
        <fullName>Area_Desc__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Area Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Name__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Area Name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Desc__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Country Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Country Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Region_Desc__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Dell Region Desc (SCHOLD)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dell_Region_Name__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Dell Region Name (SCHOLD)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Sub_Region_Desc__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Dell Sub Region Desc (SCHOLD)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dell_Sub_Region_Name__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Dell Sub Region Name (SCHOLD)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Parent_Desc__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Global Parent Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Parent_Name__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Global Parent Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <description>Integrated / Non / Apex / Affininty Source -  Y||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA / PRM - N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <externalId>true</externalId>
        <label>Group ID</label>
        <length>56</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Group Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Group_ID__c</fullName>
        <description>Integrated / Non / Apex / Affininty Source -  Y||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA   / PRM - N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Parent Group ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <formula>hyperlink(&quot;/servlet/servlet.Integration?lid=01N700000006WW4&amp;ic=1&amp;SCID=&quot; &amp; Id &amp; &quot;&amp;ParentGroupId=&quot; &amp; Parent_Group_ID__c, Parent_Group_ID__c , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Desc__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Region Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Region Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Area_Desc__c</fullName>
        <label>Regional Area Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Area_Name__c</fullName>
        <label>Regional Area Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Business_Group_Desc__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Regional Business Group Desc (SCHOLD)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Business_Group_Name__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Regional Business Group Name (SCHOLD)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Parent_Desc__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Regional Parent Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Regional_Parent_Name__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Regional Parent Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Sub_Area_Desc__c</fullName>
        <label>Regional Sub Area Desc (SCHOLD)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Sub_Area_Name__c</fullName>
        <label>Regional Sub Area Name (SCHOLD)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Sub_Business_Group_Desc__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Regional Sub Business Group Desc (SCHOLD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Regional_Sub_Business_Group_Name__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Regional Sub Business Group Name(SCHOLD)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Sub_Parent_Desc__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Regional Sub Parent Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Regional_Sub_Parent_Name__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Regional Sub Parent Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rollup_Desc__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Rollup Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rollup_Name__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Rollup Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Method_Desc__c</fullName>
        <label>Sales Method Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Method_Name__c</fullName>
        <label>Sales Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Business_Group_Desc__c</fullName>
        <label>Segment Business Group Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Business_Group_Name__c</fullName>
        <label>Segment Business Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Business_Unit_Desc__c</fullName>
        <label>Segment Business Unit Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Business_Unit_Name__c</fullName>
        <label>Segment Business Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Desc__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Segment Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Name__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Segment Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Sub_Business_Unit_Desc__c</fullName>
        <label>Segment Sub Business Unit Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Sub_Business_Unit_Name__c</fullName>
        <label>Segment Sub Business Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Area_Desc__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Sub Area Desc (SCHOLD)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Area_Name__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Sub Area Name (SCHOLD)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region_Desc__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Sub Region Desc (SCHOLD)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Region_Name__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Sub Region Name (SCHOLD)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Segment_Desc__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Sub Segment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Segment_Name__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Sub Segment Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Vertical_Desc__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Sub Vertical Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Vertical_Name__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Sub Vertical Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_Desc__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Vertical Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_Name__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/ PRM -N||
VAL -N|| 
CR# - R 9.9 # 0166 ||</description>
        <label>Vertical Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Sales Channel Group</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Channel Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>